--- a/news.html
+++ b/news.html
@@ -382,83 +382,292 @@
 							<a href="#!" class="h-style page-link p-3">explore more <i class="fa fa-long-arrow-right ml-2" aria-hidden="true"></i></a>
 						</div>
 					</div>
-					<!--clients grid -->
-					<div class="clients-item mt-5">
-						<div class="row m-0">
-							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
-								<div class="client" data-filter="comdian">
-									<figure>
-										<img src="./img/slider-1.jpg" alt="client" title="client"/>
-										<figcaption>
-											<a href="#!" class="client-link" aria-label="client-profile">
-												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-											</a>
-											<div class="client-title">
-												<h4>keith ruiz</h4>
-												<span>comdian</span>
-											</div>
-										</figcaption>
-									</figure>
+					<!--=====start clients slider ===== -->
+					<div id="clients-slider" class="carousel clients-slider mt-5" data-ride="carousel">
+						<div class="carousel-inner">
+					    	<div class="carousel-item">
+								<div class="row m-0">
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="comdian">
+											<figure>
+												<img src="./img/slider-1.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith ruiz</h4>
+														<span>comdian</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="actor">
+											<figure>
+												<img src="./img/slider-2.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>jon ruiz</h4>
+														<span>actor</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="musician">
+											<figure>
+												<img src="./img/slider-3.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith smith</h4>
+														<span>musician</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="model">
+											<figure>
+												<img src="./img/slider-4.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>pro ruiz</h4>
+														<span>model</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
-								<div class="client" data-filter="actor">
-									<figure>
-										<img src="./img/slider-2.jpg" alt="client" title="client"/>
-										<figcaption>
-											<a href="#!" class="client-link" aria-label="client-profile">
-												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-											</a>
-											<div class="client-title">
-												<h4>jon ruiz</h4>
-												<span>actor</span>
-											</div>
-										</figcaption>
-									</figure>
+							<div class="carousel-item active">
+								<div class="row m-0">
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="comdian">
+											<figure>
+												<img src="./img/slider-1.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith ruiz</h4>
+														<span>comdian</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="actor">
+											<figure>
+												<img src="./img/slider-2.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>jon ruiz</h4>
+														<span>actor</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="musician">
+											<figure>
+												<img src="./img/slider-3.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith smith</h4>
+														<span>musician</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="model">
+											<figure>
+												<img src="./img/slider-4.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>pro ruiz</h4>
+														<span>model</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
-								<div class="client" data-filter="musician">
-									<figure>
-										<img src="./img/slider-3.jpg" alt="client" title="client"/>
-										<figcaption>
-											<a href="#!" class="client-link" aria-label="client-profile">
-												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-											</a>
-											<div class="client-title">
-												<h4>keith smith</h4>
-												<span>musician</span>
-											</div>
-										</figcaption>
-									</figure>
+							<div class="carousel-item">
+								<div class="row m-0">
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="comdian">
+											<figure>
+												<img src="./img/slider-1.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith ruiz</h4>
+														<span>comdian</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="actor">
+											<figure>
+												<img src="./img/slider-2.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>jon ruiz</h4>
+														<span>actor</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="musician">
+											<figure>
+												<img src="./img/slider-3.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith smith</h4>
+														<span>musician</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="model">
+											<figure>
+												<img src="./img/slider-4.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>pro ruiz</h4>
+														<span>model</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
-								<div class="client" data-filter="model">
-									<figure>
-										<img src="./img/slider-4.jpg" alt="client" title="client"/>
-										<figcaption>
-											<a href="#!" class="client-link" aria-label="client-profile">
-												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-											</a>
-											<div class="client-title">
-												<h4>pro ruiz</h4>
-												<span>model</span>
-											</div>
-										</figcaption>
-									</figure>
+							<div class="carousel-item">
+								<div class="row m-0">
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="comdian">
+											<figure>
+												<img src="./img/slider-1.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith ruiz</h4>
+														<span>comdian</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="actor">
+											<figure>
+												<img src="./img/slider-2.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>jon ruiz</h4>
+														<span>actor</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="musician">
+											<figure>
+												<img src="./img/slider-3.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>keith smith</h4>
+														<span>musician</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
+									<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+										<div class="client" data-filter="model">
+											<figure>
+												<img src="./img/slider-4.jpg" alt="client" title="client"/>
+												<figcaption>
+													<a href="#!" class="client-link" aria-label="client-profile">
+														<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+													</a>
+													<div class="client-title">
+														<h4>pro ruiz</h4>
+														<span>model</span>
+													</div>
+												</figcaption>
+											</figure>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
+						<div class="clients-indicators mt-5">
+							<ol class="carousel-indicators">
+							    <li data-target="#clients-slider" data-slide-to="0" class=""></li>
+							    <li data-target="#clients-slider" data-slide-to="1" class="active"></li>
+							    <li data-target="#clients-slider" data-slide-to="2" class=""></li>
+							    <li data-target="#clients-slider" data-slide-to="3" class=""></li>
+							</ol>
+						</div>
 					</div>
-					<div class="clients-indicators mt-5">
-						<ol class="carousel-indicators">
-						    <li data-target="#news-slider" data-slide-to="0" class=""></li>
-						    <li data-target="#news-slider" data-slide-to="1" class="active"></li>
-						    <li data-target="#news-slider" data-slide-to="2" class=""></li>
-						    <li data-target="#news-slider" data-slide-to="3" class=""></li>
-						</ol>
-					</div>
+					<!--=====end clients slider ===== -->
 				</div>
 			</section>
 			<!--===== end clients=========-->
