header fixed media mid

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 									</div>
 								</div>
 								<div class="col-12 col-lg-6 mt-4">
-									<div id="blog-slider" class="carousel" data-ride="carousel">
+									<div id="blog-slider" class="carousel pb-3" data-ride="carousel">
 									  <ol class="carousel-indicators flex-column">
 									    <li data-target="#blog-slider" data-slide-to="0" class="active"></li>
 									    <li data-target="#blog-slider" data-slide-to="1"></li>
@@ -552,7 +552,7 @@
 							</div>
 						</div>
 						<div class="col-12 col-lg-4">
-							<div id="news-slider" class="carousel" data-ride="carousel">
+							<div id="news-slider" class="carousel pb-3" data-ride="carousel">
 							  <ol class="carousel-indicators">
 							    <li data-target="#news-slider" data-slide-to="0" class="active"></li>
 							    <li data-target="#news-slider" data-slide-to="1"></li>
@@ -600,7 +600,7 @@
 		<!--=======================
 			start footer
 		======================-->
-		<footer>
+		<footer class="pt-5">
 			<div class="container">
 				<!--news letter-->
 				<div class="row pt-3 pb-3">
