--- a/news.html
+++ b/news.html
@@ -678,7 +678,7 @@
 		<!--=======================
 			start footer
 		======================-->
-		<footer>
+		<footer class="pt-5">
 			<div class="container">
 				<!--news letter-->
 				<div class="row pt-3 pb-3">
