index full pug script

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider1"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-1.jpg" title="slider-1" alt="alt-1"/>
+                <figure><img src="./img/slider-1.jpg" title="derek&lt;br/&gt;anderson" alt="british comedian"/>
                   <figcaption>
                     <h2>derek<br/>anderson</h2>
                     <p>british comedian</p>
@@ -137,7 +137,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider2"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-2.jpg" title="slider-2" alt="alt-2"/>
+                <figure><img src="./img/slider-2.jpg" title="ahmed&lt;br/&gt;samir" alt="british comedian"/>
                   <figcaption>
                     <h2>ahmed<br/>samir</h2>
                     <p>british comedian</p>
@@ -156,7 +156,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider3"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-3.jpg" title="slider-3" alt="alt-3"/>
+                <figure><img src="./img/slider-3.jpg" title="super&lt;br/&gt;anderson" alt="british hero"/>
                   <figcaption>
                     <h2>super<br/>anderson</h2>
                     <p>british hero</p>
@@ -175,7 +175,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider4"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-4.jpg" title="slider-4" alt="alt-4"/>
+                <figure><img src="./img/slider-4.jpg" title="derek&lt;br/&gt;anderson" alt="british comedian"/>
                   <figcaption>
                     <h2>derek<br/>anderson</h2>
                     <p>british comedian</p>
@@ -199,6 +199,296 @@
       </header>
       <!-- =======================
       	end header
+      ======================
+      -->
+      <!-- =======================
+      	start main
+      ======================
+      -->
+      <main>
+        <!-- ===== start clients=========-->
+        <section class="clients pt-5 pb-5">
+          <div class="container">
+            <div class="clients-filter">
+              <ul class="list-inline text-center">
+                <li class="list-inline-item h-style active">
+                  <button class="btn-filter" type="button" data-target="all">all</button>
+                </li>
+                <li class="list-inline-item h-style">
+                  <button class="btn-filter" type="button" data-target="actor">actor</button>
+                </li>
+                <li class="list-inline-item h-style">
+                  <button class="btn-filter" type="button" data-target="musician">musician</button>
+                </li>
+                <li class="list-inline-item h-style">
+                  <button class="btn-filter" type="button" data-target="comdian">comdian</button>
+                </li>
+                <li class="list-inline-item h-style">
+                  <button class="btn-filter" type="button" data-target="model">model</button>
+                </li>
+              </ul>
+            </div>
+            <!-- start clients grid -->
+            <div class="clients-item mt-5">
+              <div class="row m-0">
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="comdian">
+                    <figure><img src="./img/slider-1.jpg" alt="keith ruiz" title="comdian"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>keith ruiz</h4><span>comdian</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="actor">
+                    <figure><img src="./img/slider-2.jpg" alt="ahmed ruiz" title="actor"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>ahmed ruiz</h4><span>actor</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="musician">
+                    <figure><img src="./img/slider-3.jpg" alt="super ahmed" title="musician"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>super ahmed</h4><span>musician</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="model">
+                    <figure><img src="./img/slider-4.jpg" alt="super hero" title="model"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>super hero</h4><span>model</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="comdian">
+                    <figure><img src="./img/slider-1.jpg" alt="keith ruiz" title="comdian"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>keith ruiz</h4><span>comdian</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="actor">
+                    <figure><img src="./img/slider-2.jpg" alt="ahmed ruiz" title="actor"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>ahmed ruiz</h4><span>actor</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="musician">
+                    <figure><img src="./img/slider-3.jpg" alt="super ahmed" title="musician"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>super ahmed</h4><span>musician</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+                  <div class="client" data-filter="model">
+                    <figure><img src="./img/slider-4.jpg" alt="super hero" title="model"/>
+                      <figcaption><a class="client-link" href="#!" aria-label="client-profile"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                        <div class="client-title">
+                          <h4>super hero</h4><span>model</span>
+                        </div>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end clients grid -->
+            <button class="btn btn-primary text-uppercase" type="button">explore more</button>
+          </div>
+        </section>
+        <!-- ===== end clients=========-->
+        <!-- ===== start stories=========-->
+        <section class="stories pt-5 pb-5">
+          <div class="container">
+            <h2 class="title-h mb-5">our stories</h2>
+            <!-- ======== start stories grid =======-->
+            <div class="row">
+              <div class="col-12 col-md-6 col-lg-4"><a class="media" href="#!">
+                  <figure class="mr-3"><img src="./img/slider-1.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation">
+                    <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
+                  </figure>
+                  <div class="media-body text-left">
+                    <h3 class="mt-0">5 reasons to keep your beauty salon reservation</h3>
+                    <time class="time">8 march, 2020</time>
+                  </div></a></div>
+              <div class="col-12 col-md-6 col-lg-4"><a class="media" href="#!">
+                  <figure class="mr-3"><img src="./img/slider-2.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation">
+                    <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
+                  </figure>
+                  <div class="media-body text-left">
+                    <h3 class="mt-0">benjamin franklin method of habit formation</h3>
+                    <time class="time">8 march, 2023</time>
+                  </div></a></div>
+              <div class="col-12 col-md-6 col-lg-4"><a class="media" href="#!">
+                  <figure class="mr-3"><img src="./img/slider-3.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business">
+                    <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
+                  </figure>
+                  <div class="media-body text-left">
+                    <h3 class="mt-0">29 mativational quotes for business</h3>
+                    <time class="time">8 march, 2022</time>
+                  </div></a></div>
+            </div>
+            <!-- ======== end stories grid =======-->
+          </div>
+        </section>
+        <!-- ===== end stories=========-->
+        <!-- ===== start news=========-->
+        <section class="news pt-5 pb-5">
+          <div class="container">
+            <div class="row">
+              <div class="col-12 col-lg-8">
+                <!-- start trending-->
+                <div class="trending"><a href="#!">
+                    <figure class="trend m-0"><img src="./img/slider-1.jpg" alt="use your reset button to change your vibration" title="use your reset button to change your vibration"/>
+                      <figcaption>
+                        <div class="trending-title"><i class="fa fa-play" aria-hidden="true"></i>
+                          <h3 class="mt-4 mb-4">use your reset button to change your vibration</h3>
+                          <time class="time">8 march, 2020</time>
+                        </div>
+                      </figcaption>
+                    </figure></a></div>
+                <!-- end trending-->
+                <div class="row">
+                  <div class="col-12 col-lg-6 mt-4">
+                    <!-- ====== start news blog-->
+                    <div class="news-blog">
+                      <figure><img class="d-block" src="./img/slider-1.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation">
+                        <figcaption>
+                          <h4>5 reasons to keep your beauty salon reservation</h4>
+                          <time class="time">8 march, 2020</time>
+                        </figcaption>
+                      </figure>
+                    </div>
+                    <!-- ====== end news blog-->
+                  </div>
+                  <div class="col-12 col-lg-6 mt-4">
+                    <!-- start blog slider-->
+                    <div class="carousel pb-3" id="blog-slider" data-ride="carousel">
+                      <ol class="carousel-indicators flex-column">
+                        <li class="active" data-target="#blog-slider" data-slide-to="0"></li>
+                        <li data-target="#blog-slider" data-slide-to="1"></li>
+                        <li data-target="#blog-slider" data-slide-to="2"></li>
+                      </ol>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <!-- start blog play-->
+                          <div class="blog-play">
+                            <figure><img class="d-block" src="./img/slider-1.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation"/>
+                              <figcaption><a class="play-blog" href="#!">
+                                  <i class="fa fa-play-circle fa-lg" aria-hidden="true"></i> play all</a></figcaption>
+                            </figure>
+                          </div>
+                          <!-- end blog play-->
+                        </div>
+                        <div class="carousel-item">
+                          <!-- start blog play-->
+                          <div class="blog-play">
+                            <figure><img class="d-block" src="./img/slider-2.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation"/>
+                              <figcaption><a class="play-blog" href="#!">
+                                  <i class="fa fa-play-circle fa-lg" aria-hidden="true"></i> play all</a></figcaption>
+                            </figure>
+                          </div>
+                          <!-- end blog play-->
+                        </div>
+                        <div class="carousel-item">
+                          <!-- start blog play-->
+                          <div class="blog-play">
+                            <figure><img class="d-block" src="./img/slider-3.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business"/>
+                              <figcaption><a class="play-blog" href="#!">
+                                  <i class="fa fa-play-circle fa-lg" aria-hidden="true"></i> play all</a></figcaption>
+                            </figure>
+                          </div>
+                          <!-- end blog play-->
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end blog slider-->
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-lg-4">
+                <div class="carousel pb-3" id="news-slider" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li class="active" data-target="#news-slider" data-slide-to="0"></li>
+                    <li data-target="#news-slider" data-slide-to="1"></li>
+                    <li data-target="#news-slider" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <!-- ====== start news blog-->
+                      <div class="news-blog">
+                        <figure><img class="d-block" src="./img/slider-1.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation">
+                          <figcaption>
+                            <h4>5 reasons to keep your beauty salon reservation</h4>
+                            <time class="time">8 march, 2020</time>
+                          </figcaption>
+                        </figure>
+                      </div>
+                      <!-- ====== end news blog-->
+                    </div>
+                    <div class="carousel-item">
+                      <!-- ====== start news blog-->
+                      <div class="news-blog">
+                        <figure><img class="d-block" src="./img/slider-2.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation">
+                          <figcaption>
+                            <h4>benjamin franklin method of habit formation</h4>
+                            <time class="time">8 march, 2023</time>
+                          </figcaption>
+                        </figure>
+                      </div>
+                      <!-- ====== end news blog-->
+                    </div>
+                    <div class="carousel-item">
+                      <!-- ====== start news blog-->
+                      <div class="news-blog">
+                        <figure><img class="d-block" src="./img/slider-3.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business">
+                          <figcaption>
+                            <h4>29 mativational quotes for business</h4>
+                            <time class="time">8 march, 2022</time>
+                          </figcaption>
+                        </figure>
+                      </div>
+                      <!-- ====== end news blog-->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- ===== end news=========-->
+      </main>
+      <!-- =======================
+      	end main
       ======================
       -->
       <!-- =======================
